# projet-slowvaud

./: .gitattributes  .gitignore  00_donnees_geodesie_slowvaud.ipynb  01_orthophotos_osm_network.ipynb  02_agglomerations_shapes.ipynb  03_context_sources.ipynb  Makefile  README.md  fetch_orthophotos_stac.py  fetch_orthophotos_wmts.py  pyproject.toml
config/: slowvaud_config.json
docs/: DATA_LOADING.md  DATA_SOURCES.md  LABEL_SCHEMA.md  METHOD_NOTES.md  SETUP.md
scripts/: check_data_inventory.py  fetch_agglomerations.py  fetch_context_sources.py
src/slowvaud/: __init__.py  cli.py  context.py  crs.py  geoadmin.py  orthophotos.py  osm.py  paths.py
